syntax = "proto3";

option go_package= "github.com/iamYole/common/api";

package api;

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (Order);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
}

message Order{
    string ID = 1;
    string customerID = 2;
    string status = 3;
    repeated Item items = 4;
    string paymentLink = 5;
}

message Item{
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3; 
    string PriceID = 4;
}

message ItemsWithQuantity{
    string ID =1;
    int32 quantity = 2;
}

message CreateOrderRequest{
    string customerID = 1;
    repeated ItemsWithQuantity items = 2;
}

message GetOrderRequest{
    string orderID = 1;
    string customerID = 2;
}

